unpackaged/main/default/objects/ebotdata__Bot_Metrics__c/ebotdata__Bot_Metrics__c.object-meta.xml
<CustomObject>
    <description>Custom Bot metrics object that records information from Bot Analytics</description>
    <label>Bot Metrics</label>
    <nameField>
        <displayFormat>BM-{00000}</displayFormat>
        <label>Bot Metrics Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bot Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>