unpackaged/main/default/objects/ebotdata__Bot_Metrics__c/fields/ebotdata__BackgroundOperationLookup__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__BackgroundOperationLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BackgroundOperationLookup</label>
    <referenceTo>BackgroundOperation</referenceTo>
    <relationshipName>Bot_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>