unpackaged/main/default/objects/ebotdata__Bot_Metrics__c/fields/ebotdata__EscalationType__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__EscalationType__c</fullName>
    <label>EscalationType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>