unpackaged/main/default/objects/ebotdata__Bot_Metrics__c/fields/ebotdata__IsSuccessfulEscalation__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__IsSuccessfulEscalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSuccessfulEscalation</label>
    <type>Checkbox</type>
</CustomField>