unpackaged/main/default/objects/ebotdata__Bot_Metrics__c/fields/ebotdata__NlpMessageCount__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__NlpMessageCount__c</fullName>
    <label>NlpMessageCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>